--- a/pele244/index.html
+++ b/pele244/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="container text-center">
-        <img src="digitalizar0783.170501.webp" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
+        <img src="PELE0000-1.webp" alt="PELÉ REI DO futebol" class="rounded-circle" width="150" height="150"
             srcset="">
         <p class="lead">Eu sou pelé</p>
         <h1>Eu dou aula de como jogar bola </h1>
@@ -25,7 +25,7 @@
         </div>
     </header>
     <main class="container mt-5">
-        <h2>Auge da minha infancia </h2>
+        <h2>minha carreira </h2>
         <div class="row">
             <!-- Projeto 1 -->
             <div class="col-md-4">
